Change committee members to math guys

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
    Inverted Pyramid Format\\ When Additional Lines Are Needed}
 
 % Your research advisor and his title
- \Advisor{Dr. Charles Xavier }
+ \Advisor{Dr. Leonhard Euler}
  \AdvisorTitle{Chair of Committee}
 
 % The text of your abstract
@@ -50,8 +50,8 @@ words. Acronyms, abbreviations, and initials as words. }
   }
 
 %% The members of your committee
- \MemberA{Dr. Stan Lee}
- \MemberB{Dr. Henry McCoy}
+ \MemberA{Dr. Carl Friedrich Gauss}
+ \MemberB{Dr. G. F. Bernhard Riemann}
  \MemberC{}
  \MemberD{}
 
