Clean up for public release.

--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,5 @@
 \documentclass[masters,draft]{UTPAthesis}
 %\documentclass[masters,final]{UTPAthesis}
-\usepackage{blindtext}
-
-%\usepackage{showkeys}
 
 % Your name
 \Author{John Q. Citizen}
@@ -70,27 +67,12 @@ words. Acronyms, abbreviations, and initials as words. }
  \mainmatter
 
 
-% OK. Everything is set up. Type your thesis here.
-\chapter{Blah}
-\blindtext[5]
-\section{blah blah}
-\blindtext
-\subsection{blah blah blah}
-\blindtext
+% OK. Everything is set up. Insert your thesis here.
 \input{introduction.tex}
-\chapter{Blah some more}
-\blindtext
-\begin{equation}\label{eq:einstein}
-	e = mc^{2}
-\end{equation}
-
 
 % Make the bibliography.
 % Enter your references in the BibTex file "references.bib"
 \bibliographystyle{siam}
 \bibliography{references}
-
-% Make the index
- % \printindex
 
 \end{document}
