--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,10 @@ words. Acronyms, abbreviations, and initials as words. }
     [Acknowledgements should be simple, in good taste, and fit on one page]
   }
 
+  \BiographicalSketch{%
+    A brief biographical sketch of the student is required as part of each thesis.
+  }
+
 %% The members of your committee
  \MemberA{Dr. Carl Friedrich Gauss}
  \MemberB{Dr. G. F. Bernhard Riemann}
@@ -72,5 +76,8 @@ words. Acronyms, abbreviations, and initials as words. }
 % Enter your references in the BibTex file "references.bib"
 \bibliographystyle{siam}
 \bibliography{references}
+
+
+\biographypage
 
 \end{document}
