Add comment about bibtex info from Google Scholar

--- a/main.tex
+++ b/main.tex
@@ -74,6 +74,7 @@ words. Acronyms, abbreviations, and initials as words. }
 
 % Make the bibliography.
 % Enter your references in the BibTex file "references.bib"
+% You can find bibtex info from Google Scholar
 \bibliographystyle{siam}
 \bibliography{references}
 
