Add appendix section to main.tex

--- a/main.tex
+++ b/main.tex
@@ -72,6 +72,10 @@ words. Acronyms, abbreviations, and initials as words. }
 % OK. Everything is set up. Insert your thesis here.
 \input{introduction.tex}
 
+
+\appendix
+\input{introduction.tex}
+
 % Make the bibliography.
 % Enter your references in the BibTex file "references.bib"
 % You can find bibtex info from Google Scholar
