Add comment for appendices in main.tex

--- a/main.tex
+++ b/main.tex
@@ -72,9 +72,9 @@ words. Acronyms, abbreviations, and initials as words. }
 % OK. Everything is set up. Insert your thesis here.
 \input{introduction.tex}
 
+%  Uncomment the following line for appendixes
+%\appendix
 
-\appendix
-\input{introduction.tex}
 
 % Make the bibliography.
 % Enter your references in the BibTex file "references.bib"
