Move TOC, LOT, LOF out of \makepreliminarypages

--- a/main.tex
+++ b/main.tex
@@ -64,6 +64,9 @@ words. Acronyms, abbreviations, and initials as words. }
  % You can comment it out during the drafting process if you want to save paper.
  \makepreliminarypages
 
+ \tableofcontents
+ \listoftables
+ \listoffigures
 
  % Start regular page counting at page 1
  \mainmatter
