--- a/introduction.tex
+++ b/introduction.tex
@@ -24,3 +24,24 @@ tomography\cite{Garza:2011fk}
   \label{fig:flyover}
 \end{figure}
 
+
+\singlespace  % need to switch to single-spacing or else table looks weird
+\begin{table}[p]
+  \centering
+\begin{tabular}{llr}
+\toprule
+\multicolumn{2}{c}{Item} \\
+\cmidrule(r){1-2}
+Animal    & Description & Price (\$) \\
+\midrule
+Gnat      & per gram    & 13.65      \\
+          & each        & 0.01       \\
+Gnu       & stuffed     & 92.50      \\
+Emu       & stuffed     & 33.33      \\
+Armadillo & frozen      & 8.99       \\
+\bottomrule
+\end{tabular}
+  \caption[Table Example]{This table shows some data}
+  \label{tab:myfirsttable}
+\end{table}
+\doublespace % switch back to double-spacing
