Move loading of hyperref and showkeys package
The hyperref redefines many LaTeX commands and should be loaded at the end.  In addition the showkeys package is designed to be loaded after the hyperref package.

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,15 @@
 \documentclass[masters,draft]{UTPAthesis}
 %\documentclass[masters,final]{UTPAthesis}
 
+
+%% Load your packages below.
+%% Make hyperref and showkeys come last of your loaded packages, to give them a
+%% fighting chance of not being over-written, since they redefine many
+%% LaTeX commands
+\usepackage[colorlinks=false]{hyperref}  % for urls
+\usepackage{showkeys}  % shows labels during draft mode
+
+
 % Your name
 \Author{John Q. Citizen}
 \Major{Mathematics}
