Add comment to main.tex regarding biography

--- a/main.tex
+++ b/main.tex
@@ -95,6 +95,7 @@ words. Acronyms, abbreviations, and initials as words. }
 \bibliography{references}
 
 
+% Insert your Biographical Sketch
 \biographypage
 
 \end{document}
