Fix author in committee page.

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -100,7 +100,7 @@
         \vspace{\baselineskip}
         A Thesis \\
         by \\
-        {\uppercase \UTPAField@Author }\\[\baselineskip]
+        \UTPAField@UppercaseAuthor\\
         \vspace{3\baselineskip}
         \uppercase{Committee Members} \\
         \vfill
