--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 %% Make hyperref and showkeys come last of your loaded packages, to give them a
 %% fighting chance of not being over-written, since they redefine many
 %% LaTeX commands
+\usepackage{booktabs} % for better tables
 \usepackage[colorlinks=false]{hyperref}  % for urls
 \usepackage{showkeys}  % shows labels during draft mode
 
