Change where your insert committee members

--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,14 @@
  \AdvisorTitle{Chair of Committee}
 
 % The text of your abstract
+
+%% Insert the members of your committee here
+ \MemberA{Dr. Carl Friedrich Gauss}
+ \MemberB{Dr. G. F. Bernhard Riemann}
+ \MemberC{}
+ \MemberD{}
+
+
  \Abstract{The abstract is double spaced, including the heading, which begins
 two inches down from the top of the page. Note that the abstract title is
 underlined and that any italicized words are not underlined (in order to
@@ -57,12 +65,6 @@ words. Acronyms, abbreviations, and initials as words. }
   \BiographicalSketch{%
     A brief biographical sketch of the student is required as part of each thesis.
   }
-
-%% The members of your committee
- \MemberA{Dr. Carl Friedrich Gauss}
- \MemberB{Dr. G. F. Bernhard Riemann}
- \MemberC{}
- \MemberD{}
 
 
 \begin{document}
