Fix spelling of option noacknowledgements

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -240,7 +240,7 @@
 
 
 % Allow opt-out on acknowledgments
-    \DeclareOption{noacknowlegments}{%
+    \DeclareOption{noacknowledgments}{%
       \renewcommand{\acknowledgmentspage}{}
     }
 
