Update abstract text in main.tex

--- a/main.tex
+++ b/main.tex
@@ -42,19 +42,10 @@
 
 
 % Insert the text of your abstract here
- \Abstract{The abstract is double spaced, including the heading, which begins
-two inches down from the top of the page. Note that the abstract title is
-underlined and that any italicized words are not underlined (in order to
-indicate italics).  If an abstract title contains scientific terminology
-requiring italics, such terminology should be treated in the same manner. Do
-not use italic print in the abstract title.  Right and left margins are the
-same as for the body of the thesis. Note that the author's name and thesis
-title must be identical on the title page, the approval page, and the
-abstract heading. The date of graduation is the same as that shown on the
-title page. The number of titles is the number of items in the bibliography
-or reference list. Word limits are 150 for master's theses and 350 for
-doctoral dissertations. Count numbers as words, hyphenated words as two
-words. Acronyms, abbreviations, and initials as words. }
+ \Abstract{%
+   An abstract is a brief summary is often used to help the reader
+   quickly ascertain the paper's purpose.
+ }
 
 
 % You can dedicate your paper here
