Increment the page number in TOC
This fixes some page numbering issues introduced by moving the page number handling inside \insertblankpage.  Also, this fixes page numbering with the options nodedication and noacknowledgements

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -304,6 +304,7 @@
       \doublespace
         \thispagestyle{fancy}
         \insertblankpage
+      \addtocounter{page}{1}
     }
 
  %Redefine the List of Figures to deal with some blank page
