Add an extra \newpage to \insertblankpage
This fixes a lot of page numbering issues.

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -61,6 +61,7 @@
           \thispagestyle{empty}
           \mbox{}
         \addtocounter{page}{-1}
+          \newpage
         }
 
 % Define the preliminary page layouts using the variables
