Initialize \MemberX{} variables in .cls file
This initializes the \Member variables in the .cls file.  This avoids unnecessary errors if a user omits doing so.

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -55,7 +55,10 @@
     \docname{thesis}
     \degree{\uppercase{Master of Science}}
     \AdvisorTitle{Chair of Committee}
-
+    \MemberA{}
+    \MemberB{}
+    \MemberC{}
+    \MemberD{}
 
 % define a command to insert a blank page
         \newcommand{\insertblankpage}{%
