--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 
 
 %% Insert the members of your committee here
-\MemberA{Dr. Carl Friedrich Gauss}
+\MemberA{Dr. Carl Friedrich Gauss}  %\MemberATitle{Co-Chair of Committee}
 \MemberB{Dr. G. F. Bernhard Riemann}
 \MemberC{}
 \MemberD{}
