Add \doublespace to main.tex

--- a/main.tex
+++ b/main.tex
@@ -86,6 +86,9 @@ A brief biographical sketch of the student is required as part of each thesis.
 % This starts regular page counting in Arabic numerals
 \mainmatter
 
+% This starts double-spaced text.  Opposite command is \singlespace
+\doublespace
+
 
 % OK. Everything is set up. Insert your thesis below.
 % It's a good idea to split your thesis up into different files and use
