Add extra \documentclass with nodedication option

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass[masters,draft]{UTPAthesis}
 %\documentclass[masters,final]{UTPAthesis}
+%\documentclass[masters,final, nodedication, noacknowledgments]{UTPAthesis}
 
 
 %% Load your packages below.
