Change title in abstract to match real title

--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 % Insert the counts for tables and figures.
 \Abstract{%
   \noindent Citizen, John Q.,
-  \uline{This Is A Very Long Title To Show How To Place Breaks}.
+  \uline{Titles Should Not Exceed Six Inches on One Line and In The Inverted Pyramid Format When Additional Lines Are Needed}.
   Master of Science (MS),
   May 2014,
   \pageref{LastPage} pages,
