Fix spelling in \Abstract in main.tex

--- a/main.tex
+++ b/main.tex
@@ -59,10 +59,10 @@
   An abstract is a brief summary often used to help the reader quickly
   ascertain the paper's purpose.  The UTPA thesis manual requires your abstract
   to have the bibliography style citation above. The latex macros above
-  count pages, tables, and references. The command
-  `noindent' prevents indention.  Unfortunately, the author of this template
-  hasn't figured out a way to cunt tables and figure reliably. You will have to
-  insert the counts for those manually.
+  count pages, tables, and references. The command `noindent' prevents
+  indention.  Unfortunately, the author of this template hasn't figured out a
+  way to count tables and figure reliably. You will have to insert the counts
+  for those manually.
 }
 
 
